add(chainlink): update Syntropy Agent controller url

--- a/chainlink/ansible/roles/nomad_deploy/templates/syntropy_agent.hcl.j2
+++ b/chainlink/ansible/roles/nomad_deploy/templates/syntropy_agent.hcl.j2
@@ -19,7 +19,7 @@ job "syntropy-agent" {
 
             env {
                 SYNTROPY_API_KEY = "{{ SYNTROPY_AGENT_API_KEY }}"
-                SYNTROPY_CONTROLLER_URL = "controller-prod-platform-agents.noia.network"
+                SYNTROPY_CONTROLLER_URL = "controller-prod-platform-agents.syntropystack.com"
                 SYNTROPY_NETWORK_API = "docker"
                 SYNTROPY_LOG_LEVEL = 10
             }
